@@ -1,22 +1,27 @@
 #
 ARC_FILE=../../../makefile.arc
+ifndef GLIMMER_PREFIX
+GLIMMER_PREFIX=../../../
+endif
 include $(ARC_FILE)
 #
-LIBNAME = libslap
+LIBS = libslap.a
 OBJECTS = blas.o dcgs.o dlaputil.o dmset.o dmvops.o mach.o xersla.o
 
 INCLUDE_FILES=
 
 OTHER_FILES=$(ARC_FILE) makefile
 
-$(LIBNAME).a: $(OBJECTS) $(OTHER_FILES) $(INCLUDE_FILES)
-	if [ -f $(LIBNAME).a ] ; then \rm $(LIBNAME).a ; fi
-	ar rcv $(LIBNAME).a $(OBJECTS)
-	if [ "$(RANLIB)" != "" ] ; then $(RANLIB) $(LIBNAME).a ; fi
-	\cp $(LIBNAME).a ..
+libslap.a: $(OBJECTS) $(OTHER_FILES) $(INCLUDE_FILES)
+	ar rcv $@ $(OBJECTS)
+	if [ "$(RANLIB)" != "" ] ; then $(RANLIB) libslap.a ; fi
+
+install:	$(LIBS)
+	install -d $(GLIMMER_PREFIX)/lib
+	cp $(LIBS) $(GLIMMER_PREFIX)/lib
 
 clean : 
-	\rm -f *.o *.a
+	rm -f *.o *.a
 
 blas.o: blas.f $(OTHER_FILES)
 	$(F77) -c $(GLIMMERFLAGS) blas.f
